--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,30 +4,27 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 90, 190, 25; /* Verde claro */
+  --background-end-rgb: 220, 252, 231; /* Verde mais escuro */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 90, 190, 25; /* Verde claro */
+    --background-end-rgb: 220, 252, 231; /* Verde mais escuro */
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    to bottom,
+    rgb(var(--background-start-rgb)),
+    rgb(var(--background-end-rgb))
+  );
+  background-size: cover; /* Garante que o gradiente cubra toda a área visível */
+  background-attachment: fixed; /* Faz o fundo não rolar com o conteúdo */
+  min-height: 100vh; /* Garante que o corpo tenha pelo menos a altura da viewport */
+  margin: 0; /* Remove margens padrão */
 }
