--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,15 +4,31 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 90, 190, 25; /* Verde claro */
-  --background-end-rgb: 220, 252, 231; /* Verde mais escuro */
+  --background-start-rgb: 13, 143, 194;
+  --background-end-rgb: 255, 255, 255;
+}
+
+.transparent {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.chgfont {
+  color: black;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 90, 190, 25; /* Verde claro */
-    --background-end-rgb: 220, 252, 231; /* Verde mais escuro */
+    --background-start-rgb: 20, 20, 20;
+    --background-end-rgb: 36, 93, 170;
+  }
+
+  .transparent {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+  .chgfont {
+    color: rgb(255, 255, 255);
   }
 }
 
@@ -27,4 +43,10 @@ body {
   background-attachment: fixed; /* Faz o fundo não rolar com o conteúdo */
   min-height: 100vh; /* Garante que o corpo tenha pelo menos a altura da viewport */
   margin: 0; /* Remove margens padrão */
+}
+
+@layer components {
+  .data-table tr:nth-child(even) {
+    background-color: #d2e4fd;  
+  }
 }
